# TabularSynthesis

./: .replit  OPTIMIZATIONS.md  analyze_adult_data.py  evaluation_updates.py  main.py  pyproject.toml  replit.nix  test_optimizations.py  test_streamlit.py  test_table_gan.py  test_wandb.py  test_wandb_modal.py  test_wandb_sweep.py  test_wgan.py  train_and_save.py  train_local_model.py  train_model.py  train_quick_model.py  upload_model_to_modal.py
.streamlit/: config.toml
attached_assets/: 2025-03-03T06-58_export.csv  2025-03-09T21-25_export.csv  Continuous Data Example from GAN.ipynb.csv  Export Mar 17 2025.csv  Modal Labs Client.txt  Modal Labs Examples.txt  Pasted-Comprehensive-GAN-Based-Tabular-Data-Generation-Project1-Project-Overview-and-Requirements-Understa-1740922714366.txt  Pasted-Connection-failed-with-status-502-and-response-DOCTYPE-html-html-lang-en-head-title-H-1741519282746.txt  Pasted-Fine-tune-an-LLM-using-Axolotl-ft-Llama-2-CodeLlama-Mistral-etc-View-on-GitHub-Tired-of-promp-1741769888000.txt  Pasted-Hi-The-issue-here-is-a-common-pitfall-of-migrating-CSR-to-SSR-The-HTML-rendered-by-the-server-ha-1740946497065.txt  Pasted-Modal-training-failed-Both-remote-and-local-generation-failed-Deserialization-failed-because-the--1743679667951.txt  Pasted-Modal-training-failed-Modal-generation-failed-Failed-to-load-model-Error-s-in-loading-state-dict-1741552920767.txt  Pasted-RuntimeError-all-elements-of-input-should-be-between-0-and-1-Traceback-File-home-runner-workspac-1741552386613.txt  Pasted-ValueError-Found-array-with-0-sample-s-shape-0-1-while-a-minimum-of-1-is-required-by-Standard-1741557300606.txt  Synthetic Data (1).csv  baukebrenninkmeijer-table-evaluator.git (1).txt  content-1741771447753.md  (+20 more)
(+211 files in other folders)
