[project]
name = "synthetic-data-generator"
version = "0.1.0"
description = "A Streamlit-based synthetic data generation system with modular GAN architecture"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "modal>=0.73.78",
    "numpy>=2.2.3",
    "openai>=1.65.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.42.2",
    "tarsafe>=0.0.5",
    "torch>=2.6.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
