[project]
name = "synthetic-data-generator"
version = "0.1.0"
description = "A Streamlit-based synthetic data generation system with modular GAN architecture"
requires-python = ">=3.11"
dependencies = [
    "bayesian-optimization>=2.0.3",
    "matplotlib>=3.10.1",
    "modal>=0.73.78",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.11.0",
    "seaborn>=0.13.2",
    "streamlit>=1.42.2",
    "table-evaluator==1.4.1",
    "tarsafe>=0.0.5",
    "torch>=2.6.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
    "wandb>=0.19.8",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
